@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-05T16:18:03Z",
-  "count" : 5,
-  "count_minmax" : [ 5, 5 ],
-  "count_decinc" : [ -0, +5 ],
-  "uniques" : 3,
-  "uniques_minmax" : [ 3, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "timestamp" : "2023-07-06T01:17:44Z",
+  "count" : 13,
+  "count_minmax" : [ 5, 13 ],
+  "count_decinc" : [ -0, +13 ],
+  "uniques" : 8,
+  "uniques_minmax" : [ 3, 8 ],
+  "uniques_decinc" : [ -0, +8 ]
 }
