@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-05T16:18:03Z",
+  "timestamp" : "2023-07-06T01:17:44Z",
   "count_outdated" : 125,
   "uniques_outdated" : 106,
-  "count" : 134,
-  "uniques" : 112,
+  "count" : 142,
+  "uniques" : 117,
   "clones" : [
     {
       "timestamp": "2023-06-22T00:00:00Z",
@@ -34,12 +34,12 @@
     },
     {
       "timestamp": "2023-07-05T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
-      "count_decinc": [ 0, 5 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "count": 13,
+      "count_minmax": [ 5, 13 ],
+      "count_decinc": [ 0, 13 ],
+      "uniques": 8,
+      "uniques_minmax": [ 3, 8 ],
+      "uniques_decinc": [ 0, 8 ]
     }
   ]
 }
