@@ -1,6 +1,6 @@
 {
-  "count": 9,
-  "uniques": 5,
+  "count": 17,
+  "uniques": 10,
   "clones": [
     {
       "timestamp": "2023-06-22T00:00:00Z",
@@ -19,8 +19,8 @@
     },
     {
       "timestamp": "2023-07-05T00:00:00Z",
-      "count": 5,
-      "uniques": 3
+      "count": 13,
+      "uniques": 8
     }
   ]
 }
